ICPP-19 submitted files

--- a/ICPP-19/communications.tex
+++ b/ICPP-19/communications.tex
@@ -9,14 +9,34 @@
 
 
 
+%%\copyrightyear{2019}
+%%\acmYear{2019}
+%%\setcopyright{acmlicensed}
+%%\acmConference[ICPP '19]{ICPP 2019: 48th International Conference on Parallel Processing}{August 05--08, 2019}{Kyoto, Japan}
+%%%%\acmBooktitle{Woodstock '18: ACM Symposium on Neural Gaze Detection, June 03--05, 2018, Woodstock, NY}
+%%%%\acmPrice{15.00}
+%%%%\acmDOI{10.1145/1122445.1122456}
+%%%%\acmISBN{978-1-4503-9999-9/18/06}
+
 \copyrightyear{2019}
 \acmYear{2019}
-\setcopyright{acmlicensed}
-\acmConference[ICPP '19]{ICPP 2019: 48th International Conference on Parallel Processing}{August 05--08, 2019}{Kyoto, Japan}
-%%\acmBooktitle{Woodstock '18: ACM Symposium on Neural Gaze Detection, June 03--05, 2018, Woodstock, NY}
-%%\acmPrice{15.00}
-%%\acmDOI{10.1145/1122445.1122456}
-%%\acmISBN{978-1-4503-9999-9/18/06}
+%%\setcopyright{acmlicensed}
+%%\setcopyright{llicensedusgovmixed}
+\setcopyright{licensedusgovmixed}
+
+%%none,%
+%%acmcopyright,acmlicensed,rightsretained,%
+%%usgov,usgovmixed,cagov,cagovmixed,licensedusgovmixed,%
+%%licensedcagov,licensedcagovmixed,othergov,licensedothergov,%
+%%iw3c2w3,iw3c2w3g
+
+\acmConference[ICPP 2019]{48th International Conference on Parallel Processing}{August 5--8, 2019}{Kyoto, Japan}
+\acmBooktitle{48th International Conference on Parallel Processing (ICPP 2019), August 5--8, 2019, Kyoto, Japan}
+\acmPrice{15.00}
+\acmDOI{10.1145/3337821.3337921}
+\acmISBN{978-1-4503-6295-5/19/08}
+
+
 
 \usepackage{graphicx} 
 
